# ngnk_kernel

./: Dockerfile  LICENSE  README-docker.md  README.md  install.py  pyproject.toml
ngnk_kernel/: __init__.py  __main__.py  kernel.py
