[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ngnk_kernel"
author = "Stefan Kruger"
author-email = "stefan.kruger@gmail.com"
home-page = "https://github.com/xpqz/ngnk_kernel"
requires = ["pexpect (>=4.0)"]
description-file = "README.md"
classifiers = [
    "Framework :: IPython",
    "License ::OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]
